...
                                            <textField opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="5 or 40g or 12L or 45mL" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="r6q-Ks-tlQ">
                                                <rect key="frame" x="128" y="300" width="172" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Quantity"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Select Date" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ooz-lD-X16">
                                                <rect key="frame" x="128" y="344" width="172" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Expiry"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="188" id="ENI-vJ-2HE"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Eggs or Milk" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Im6-dk-dzo">
                                                <rect key="frame" x="128" y="256" width="172" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Ingredient"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ingredient:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1fm-Ec-8ce">
                                                <rect key="frame" x="24" y="253" width="102" height="27"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quantity:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="smc-5u-Q0G">
                                                <rect key="frame" x="38" y="298" width="88" height="27"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                <state key="normal" title="Confirm Entry">
                                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                </state>
...
                                                </connections>
                                            </button>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Expiry:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Hb-iT-RTW">
                                                <rect key="frame" x="61" y="342" width="65" height="27"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
...
                        <barButtonItem title="Item" id="5fu-51-qoM"/>
                    </toolbarItems>
                    <navigationItem key="navigationItem" title="Pantry" id="NYh-Ga-eT6">
                        <barButtonItem key="rightBarButtonItem" title="+ Add" id="tDW-Gm-Dwd">
                            <connections>
                                <segue destination="ahS-9x-93o" kind="show" id="BOD-J4-6ig"/>
...
