...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Good" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9SS-mA-C2u">
                                <rect key="frame" x="16" y="72" width="57.5" height="25"/>
                                <accessibility key="accessibilityConfiguration" identifier="goodLabel"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="25" id="iNS-vm-5P0"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Day" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iSm-lS-HFr">
                                <rect key="frame" x="16" y="92" width="57.5" height="28"/>
                                <accessibility key="accessibilityConfiguration" identifier="timeOfDayLabel"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="28" id="LMf-ds-gF2"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
...
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                            </tableView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-ºC" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oa1-Ed-zwl">
                                <rect key="frame" x="81.5" y="72" width="222.5" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="tempLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s51-oK-hFZ">
                                                <rect key="frame" x="16" y="309.5" width="288" height="30"/>
                                                <state key="normal" title="Open Recipe"/>
                                                <connections>
                                                    <action selector="clickRecipeButton:" destination="TRU-C4-yU6" eventType="touchUpInside" id="xJV-C6-W6F"/>
                                                </connections>
                                            </button>
                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="lGS-cg-aiT">
                                                <rect key="frame" x="64" y="8" width="192" height="192"/>
...
                            <constraint firstItem="IRT-5W-VEd" firstAttribute="leading" secondItem="yYj-pv-ToX" secondAttribute="leading" constant="16" id="wYO-b4-CAo"/>
                            <constraint firstItem="yYj-pv-ToX" firstAttribute="bottom" secondItem="Wlr-em-scl" secondAttribute="bottom" id="xfu-cA-fzh"/>
                            <constraint firstItem="yYj-pv-ToX" firstAttribute="trailing" secondItem="Wlr-em-scl" secondAttribute="trailing" constant="16" id="zee-GE-On4"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="yYj-pv-ToX"/>
                    </view>
                    <navigationItem key="navigationItem" title="Explore" id="k7x-N7-n4A"/>
                    <connections>
                        <outlet property="activityView" destination="Wlr-em-scl" id="sdH-cW-5UD"/>
                        <outlet property="loadingSpinner" destination="hcw-Ra-Ghy" id="Dow-0Q-Ftw"/>
                        <outlet property="searchBar" destination="VCh-wc-L5J" id="sSO-k8-jwz"/>
                        <outlet property="tableView" destination="IRT-5W-VEd" id="VPv-Di-SFO"/>
                    </connections>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="rLM-2g-nzS" id="DLb-0W-bXr"/>
                            <outlet property="delegate" destination="rLM-2g-nzS" id="vl4-A5-wLz"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Development Team" id="IKh-ZE-22j">
                        <barButtonItem key="backBarButtonItem" title="Development Team" id="AeF-Hh-7e6"/>
                    </navigationItem>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="LyJ-jR-5Q6" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2546.25" y="-263.02816901408448"/>
...
            <point key="canvasLocation" x="847.5" y="536.61971830985919"/>
        </scene>
        <!--Profiles-->
        <scene sceneID="GhY-DC-dgj">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="xiQ-0L-EX8" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Profiles" image="users" id="UXK-Yj-iKV"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="W5n-Ky-C2r">
                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
