...
        super.viewDidLoad()
        tableView.tableFooterView = UIView(frame: CGRect.zero)
        searchBar.delegate = self
        self.tableView.delegate = self
        self.tableView.dataSource = self
        viewModel.delegate = self
        searchBar.placeholder = "Search Recipes"
        self.navigationItem.leftBarButtonItem = nil
        self.navigationItem.hidesBackButton = true
        
        loadingSpinner.hidesWhenStopped = true
        loadingSpinner.stopAnimating()
    }
...
